Further edits on css and html changing the flexboxes in Work section

--- a/index.html
+++ b/index.html
@@ -31,25 +31,30 @@
     <div class="sidebox">
       <h2>About Me </h2>
     </div>
-      <div class ="thecontent">
-        <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita iure qui repellat ullam quidem
-          perspiciatis sit ipsam quibusdam, magnam quo, sint, earum exercitationem? Eius consequatur vel repellat sunt
-          quam architecto.  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita iure qui repellat ullam quidem
-          perspiciatis sit ipsam quibusdam, magnam quo, sint, earum exercitationem? Eius consequatur vel repellat sunt
-          quam architecto.
-      </div>
+    <div class="thecontent">
+      <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita iure qui repellat ullam quidem
+        perspiciatis sit ipsam quibusdam, magnam quo, sint, earum exercitationem? Eius consequatur vel repellat sunt
+        quam architecto. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita iure qui repellat ullam
+        quidem
+        perspiciatis sit ipsam quibusdam, magnam quo, sint, earum exercitationem? Eius consequatur vel repellat sunt
+        quam architecto.
+    </div>
     <div class="sidebox">
       <h2>Work</h2>
     </div>
     <div>
-      <div class = "thecontent">
+      <div class="thecontent">
         <div class="reports">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, commodi magni nulla aliquam dignissimos quas
-          eum laborum nihil optio repellendus est, laboriosam maiores. Unde esse perspiciatis repellat minima ex ullam!
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis beatae maiores ipsum saepe labore ipsa quidem
-          odit dolorem, quod totam accusantium modi iste neque recusandae! Illo officiis vero eligendi ipsam! Lorem
-          ipsum dolor sit amet consectetur adipisicing elit. Et harum molestias porro, quod sapiente officia cupiditate
-          facilis aliquam a suscipit voluptas earum alias, modi consequuntur perspiciatis obcaecati iusto, inventore ex?
+          <figure class="surf"></figure>
+          <h3>Surf Report MERN Stack</h3>
+          <figure class="led"></figure>
+          <h4>LED Wall Node/IoT</h4>
+          <figure class="calc"></figure>
+          <h4>Calculator React/JavaScript/CSS</h4>
+          <figure class="pastel"></figure>
+          <h5>Pastel Puzzles MERN Stack</h5>
+          <figure class="run"></figure>
+          <h5>Run Buddy HTML/CSS</h5>
         </div>
       </div>
     </div>
