Final touches to css and scrolling of navbar

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
       <h1 class="company">Lernantino </h1>
       <nav class="navbuttons">
         <!-- Add url to the href -->
-        <a href="https://github.com/therealohzone/John-Oh-Portfolio">About Me</a>
-        <a href="https://github.com/therealohzone/John-Oh-Portfolio">Work</a>
-        <a href="https://github.com/therealohzone/John-Oh-Portfolio">Contact Me</a>
+        <a href="#aboutme">About Me</a>
+        <a href="#work">Work</a>
+        <a href="#contactme">Contact Me</a>
         <a href="https://github.com/therealohzone/John-Oh-Portfolio">Resume</a>
       </nav>
     </div>
@@ -29,7 +29,9 @@
 
   <section class="grid1">
     <div class="sidebox">
+      <div id="aboutme">
       <h2>About Me </h2>
+      </div>  
     </div>
     <div class="thecontent">
       <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita iure qui repellat ullam quidem
@@ -38,29 +40,44 @@
         quidem
         perspiciatis sit ipsam quibusdam, magnam quo, sint, earum exercitationem? Eius consequatur vel repellat sunt
         quam architecto.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat amet commodi ullam beatae. Inventore nobis,
+        dolorem quas, dignissimos quam accusamus tempore aliquid amet, incidunt id distinctio architecto. Eaque, odio
+        impedit. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rerum voluptate doloribus laborum quas magnam
+        fuga, odio reiciendis eligendi rem esse dignissimos hic? Officiis maxime non aspernatur, consequuntur odio ut
+        laudantium.
+      </p>
     </div>
     <div class="sidebox">
+      <div id="work">
       <h2>Work</h2>
+      </div>
     </div>
     <div>
       <div class="thecontent">
         <div class="reports">
-          <figure class="surf"></figure>
-          <h3>Surf Report MERN Stack</h3>
-          <figure class="led"></figure>
-          <h4>LED Wall Node/IoT</h4>
-          <figure class="calc"></figure>
-          <h4>Calculator React/JavaScript/CSS</h4>
-          <figure class="pastel"></figure>
-          <h5>Pastel Puzzles MERN Stack</h5>
-          <figure class="run"></figure>
-          <h5>Run Buddy HTML/CSS</h5>
+          <figure class="surf">
+            <h3>Surf Report <br> MERN Stack </br></h3>
+          </figure>
+          <figure class="led">
+            <h4> LED Wall <br>Node/IoT </br></h4>
+          </figure>
+          <figure class="calc">
+            <h4>Calculator <br>React/JavaScript/CSS</br></h4>
+          </figure>
+          <figure class="pastel">
+            <h5>Pastel Puzzles <br>MERN Stack</br></h5>
+          </figure>
+          <figure class="run">
+            <h5>Run Buddy </br>HTML/CSS</br></h5>
+          </figure>
         </div>
       </div>
     </div>
 
     <div class="sidebox">
+      <div id="contactme">
       <h2>Contact Me</h2>
+      </div>
     </div>
     <div class="thecontent">
       <ul>
